# peterbot

./: .gitignore  README.md  pyproject.toml
data/: jobs.json  sites.json
docs/: 00_getting_started.md  01_file_structure.md  02_database.md
notebooks/: download_site.py  jobs.ipynb  mongo.ipynb  sites.ipynb  test.ipynb
src/peterbot/: __init__.py  logging_config.py
src/peterbot/data/: __init__.py  data_store.py  jobs_db_json.py  mongo.py  sites_db_json.py
src/peterbot/data/collections/: jobs.py  sites.py  utils.py
src/peterbot/data_json/: jobs_json.py
src/peterbot/jobs/: __init__.py  download_site.py  test_job.py  update_diocese_parishes.py
src/peterbot/jobs/utils/: __init__.py  download.py  job.py
tests/: test_sanity.py
tests/data/: test_jobs.py  test_mongo.py  test_sites.py
