[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peterbot"
version = "0.1.0"
description = "Gather information from Catholic organizations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Joe May" }
]
dependencies = [
  # "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  # "black",      # if you want black instead of ruff format
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Pytest config
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Ruff (lint + format)
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
